# diffeq

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  diffeq_8f90_source.html  diffeq__abmf_8f90_source.html  diffeq__expfixed_8f90_source.html  diffeq__fs__integrator_8f90_source.html  diffeq__harmonics_8f90_source.html  diffeq__harmonics__routines_8f90_source.html  diffeq__multistep__fixed_8f90_source.html  diffeq__ode__container_8f90_source.html  diffeq__rk4_8f90_source.html  diffeq__rkfixed_8f90_source.html  diffeq__vs__integrator_8f90_source.html  diffeq__vssi_8f90_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  docs.md  error_log.txt  files.html  fpm.toml  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_5.dot  inherit_graph_7.dot  interfacediffeq_1_1ode.html  interfacediffeq_1_1ode__fixed__step.html  interfacediffeq_1_1ode__integer__inquiry.html  interfacediffeq_1_1ode__jacobian.html  interfacediffeq_1_1ode__mass__matrix-members.html  (+91 more)
.github/workflows/: cmake.yml  doc-deployment.yml  fpm.yml
configure/: template.cmake
dependencies/: CMakeLists.txt
dependencies/fftpack/: CMakeLists.txt
dependencies/linalg/: CMakeLists.txt
dependencies/nonlin/: CMakeLists.txt
dependencies/spectrum/: CMakeLists.txt
doc/: index.html  search.html
doc/interface/: attempt_single_step.html  build_factored_newton_matrix_routine.html  dirk_eval_error.html  dirk_get_array_value.html  dirk_get_matrix_value.html  get_single_step_logical_parameter.html  next_step_size_calculator.html  ode.html  ode_fixed_step.html  ode_integer_inquiry.html  ode_jacobian.html  ode_mass_matrix.html  ode_solver.html  rkf_get_array_parameter.html  rkf_get_matrix_parameter.html  rkv_action.html  rkv_get_array_parameter.html  rkv_get_boolean_parameter.html  rkv_get_integer_parameter.html  rkv_get_matrix_parameter.html  rkv_set_up_interp.html  single_step_integer_inquiry.html  single_step_interpolate.html  single_step_post_step_routine.html  single_step_pre_step_routine.html  variable_step_action.html  variable_step_attempt.html  variable_step_interpolation.html
doc/lists/: files.html  modules.html  procedures.html  types.html
doc/module/: diffeq.html  diffeq_abmf.html  diffeq_base.html  diffeq_bsrk32_constants.html  (+15 more)
docs/: Doxyfile
examples/: CMakeLists.txt  adams_fixed_example.f90  bsrk32_example.f90  comparison_example.f90  dprk45_dense_example.f90  dprk45_example.f90  expf_example.f90  frf_example.f90  frf_sweep_example.f90  irk4_example.f90  parametric_example.f90  rk45_example.f90  rk4_example.f90  rk853_example.f90  rk_comparison_example.f90  rosenbrock_example.f90  sdirk4_example.f90  stiff_integrator_example.f90
install/: template.pc
interface/: attempt_single_step.html  get_single_step_logical_parameter.html  ode.html  ode_integer_inquiry.html  ode_jacobian.html  ode_solver.html  single_step_integer_inquiry.html  single_step_post_step_routine.html
lists/: files.html  modules.html
module/: diffeq_base.html  diffeq_bsrk32_constants.html  diffeq_errors.html  diffeq_implicit_runge_kutta.html  diffeq_rk853_constants.html  diffeq_runge_kutta.html
proc/: dacopy.html  daxpy.html  dcopy.html  ddot.html  dewset.html  dgbfa.html  dgbsl.html  dgefa.html  dgesl.html  dscal.html  dumach.html  dumsum.html  dvhin.html  dvindy.html  dvjac.html  dvjust.html  dvnlsd.html  dvnorm.html  dvode.html  dvset.html  dvsol.html  dvsrco.html  dvstep.html  idamax.html  iumach.html  ixsav.html  report_array_size_error.html  report_excessive_integration_steps.html  report_matrix_size_error.html  report_memory_error.html  report_min_array_size_not_met.html  report_step_size_too_small.html  xerrwd.html  xsetf.html  xsetun.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_9.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_b.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  namespaces_0.js  searchdata.js
sourcefile/: diffeq.f90.html  diffeq_dprk45_constants.f90.html  diffeq_errors.f90.html  diffeq_implicit_runge_kutta.f90.html  diffeq_rk853_constants.f90.html  diffeq_runge_kutta.f90.html  dvode.f.html
src/: CMakeLists.txt  dffeq_ode_integrator.f90  diffeq.f90  diffeq_abmf.f90  diffeq_base.f90  diffeq_bsrk32.f90  diffeq_bsrk32_constants.f90  diffeq_dirk.f90  diffeq_dprk45.f90  diffeq_errors.f90  diffeq_expfixed.f90  diffeq_fs_integrator.f90  diffeq_harmonics.f90  diffeq_harmonics_routines.f90  diffeq_implicit_rk.f90  diffeq_implicit_runge_kutta.f90  diffeq_multistep_fixed.f90  diffeq_ode_container.f90  diffeq_ode_integrator.f90  diffeq_radau.f90  diffeq_rk4.f90  diffeq_rk853_constants.f90  diffeq_rkfixed.f90  diffeq_rkvariable.f90  diffeq_rosenbrock.f90  diffeq_runge_kutta.f90  diffeq_sdirk.f90  diffeq_sdirk4.f90  diffeq_sdirk4_constants.f90  diffeq_stiffly_stable.f90  diffeq_tools.f90  diffeq_variable_singlestep.f90  diffeq_vode.f90  diffeq_vs_integrator.f90  diffeq_vssi.f90
src/VODE/: dvode.f
src/old/: diffeq_abmf.f90  diffeq_fixed_step.f90  diffeq_implicit_runge_kutta.f90  diffeq_multistep_fixed.f90  diffeq_rk4.f90  diffeq_rk_fixed_step.f90  diffeq_runge_kutta.f90  diffeq_variable_step.f90
test/: CMakeLists.txt  diffeq_adamsfixed_tests.f90  diffeq_bsrk32_tests.f90  diffeq_dprk45_tests.f90  diffeq_equilibrium_tests.f90  diffeq_expfixed_tests.f90  diffeq_frf_tests.f90  diffeq_jacobian_tests.f90  diffeq_models.f90  diffeq_radau_tests.f90  diffeq_rkfixed_tests.f90  diffeq_rosenbrock_tests.f90  diffeq_sdirk4_tests.f90  diffeq_test.f90  diffeq_test_implicit_rk.f90  diffeq_test_runge_kutta.f90  diffeq_test_stiffly_stable.f90  diffeq_test_vode.f90
tipuesearch/: tipuesearch_content.js
type/: ode_container.html  ode_integrator.html  runge_kutta_23.html  runge_kutta_45.html  runge_kutta_853.html
(+224 files in other folders)
